--- a/vincent/build.gradle
+++ b/vincent/build.gradle
@@ -22,15 +22,11 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    compile 'com.android.support:appcompat-v7:25.0.0'
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile 'com.android.support:support-v4:25.0.0'
     testCompile 'junit:junit:4.12'
-
-    compile 'com.orhanobut:logger:1.8'//logger日志工具
-
+    //logger日志工具
+    compile 'com.orhanobut:logger:1.8'
+    //Volley
     compile 'com.navercorp.volleyextensions:volley-views:2.0.1'
-
 }
