--- a/vincent/src/main/AndroidManifest.xml
+++ b/vincent/src/main/AndroidManifest.xml
@@ -3,12 +3,37 @@
 
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
         android:supportsRtl="true">
 
+        <activity android:name="com.common.libary.KeepLiveActivity"/>
+
+        <service
+            android:name="com.common.libary.service.JulieService"
+            android:enabled="true"
+            android:persistent="true"
+            android:priority="1000"
+            android:process="julie.main.JulieService"
+            android:exported="true"/>
+        <service
+            android:name="com.common.libary.service.HintNotifacationService"/>
+        <service
+            android:name="com.common.libary.service.ProtectService"
+            android:enabled="true"
+            android:persistent="true"
+            android:priority="1000"
+            android:process="julie.main.ProtectService"
+            android:exported="true"/>
+        <service
+            android:name="com.common.libary.service.JobCastielService"
+            android:enabled="true"
+            android:persistent="true"
+            android:priority="1000"
+            android:permission="android.permission.BIND_JOB_SERVICE"/>
     </application>
 
 </manifest>
