--- a/vincent/src/main/AndroidManifest.xml
+++ b/vincent/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
             android:process="julie.main.JulieService"
             android:exported="true"/>
         <service
-            android:name="com.common.libary.service.HintNotifacationService"/>
+            android:name="com.common.libary.service.KillNotifacationService"/>
         <service
             android:name="com.common.libary.service.ProtectService"
             android:enabled="true"
