--- a/vincent/build.gradle
+++ b/vincent/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.neenbedankt.android-apt'
 //apply from: 'maven-push.gradle'
 android {
     compileSdkVersion 25
@@ -23,10 +24,16 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
+    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
     compile 'com.android.support:support-v4:25.0.0'
     testCompile 'junit:junit:4.12'
     //logger日志工具
     compile 'com.orhanobut:logger:1.8'
     //Volley
     compile 'com.navercorp.volleyextensions:volley-views:2.0.1'
+    //权限适配，android6.0之后的  由于适配权限，必须在项目的根目录的build.gradle中的dependencies{}添加 classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+    compile 'com.github.hotchemi:permissionsdispatcher:2.1.3'
+    apt 'com.github.hotchemi:permissionsdispatcher-processor:2.1.3'
 }
