--- a/vincent/src/main/AndroidManifest.xml
+++ b/vincent/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:allowBackup="true"
         android:label="@string/app_name"
         android:supportsRtl="true">
-
+        <activity android:name="com.common.libary.RequePermissionActivity"/>
         <service
             android:name="com.common.libary.service.JulieService"
             android:enabled="true"
@@ -32,6 +32,13 @@
             android:persistent="true"
             android:priority="1000"
             android:permission="android.permission.BIND_JOB_SERVICE"/>
+
+        <receiver android:name="com.common.libary.receiver.BootBroadcastReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <category android:name="android.intent.category.HOME" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
