--- a/vincent/build.gradle
+++ b/vincent/build.gradle
@@ -6,7 +6,7 @@ android {
     buildToolsVersion "25.0.0"
 
     defaultConfig {
-        minSdkVersion 16
+        minSdkVersion 14
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -24,9 +24,6 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    //butterknife 注解 配置参考：http://blog.csdn.net/pkandroid/article/details/51959548
-    apt 'com.jakewharton:butterknife-compiler:8.4.0'
-    compile 'com.jakewharton:butterknife:8.4.0'
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
@@ -40,5 +37,5 @@ dependencies {
     compile 'com.github.hotchemi:permissionsdispatcher:2.1.3'
     apt 'com.github.hotchemi:permissionsdispatcher-processor:2.1.3'
     //检查更新的库 http://blog.csdn.net/qiang_xi/article/details/52823389
-    compile 'com.qiangxi.checkupdatelibrary:checkupdatelibrary:1.0.2'
+//    compile 'com.qiangxi.checkupdatelibrary:checkupdatelibrary:1.0.2'
 }
