--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.vincent">
 
+    <uses-permission android:name="android.permission.FORCE_STOP_PACKAGES"/>
+
     <application
         android:name=".base.MyApplication"
         android:allowBackup="true"
