--- a/vincent/build.gradle
+++ b/vincent/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.library'
 apply plugin: 'com.neenbedankt.android-apt'
+//apply plugin: 'org.greenrobot.greendao'
 //apply from: 'maven-push.gradle'
 android {
     compileSdkVersion 25
@@ -47,7 +48,12 @@ dependencies {
     //    compile 'com.qiangxi.checkupdatelibrary:checkupdatelibrary:1.0.2'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     //OkGo网络框架 https://github.com/jeasonlzy/okhttp-OkGo  使用之前必须初始化，在extends Application的onCreate(）中 OkGo.init(this);
-    compile 'com.lzy.net:okgo:+'        //版本号使用 + 可以自动引用最新版
-    compile 'com.lzy.net:okrx:+'        //版本号使用 + 可以自动引用最新版
-    compile 'com.lzy.net:okserver:+'    //版本号使用 + 可以自动引用最新版
+    compile 'com.lzy.net:okgo:+'
+    //版本号使用 + 可以自动引用最新版
+    compile 'com.lzy.net:okrx:+'
+    //版本号使用 + 可以自动引用最新版
+    compile 'com.lzy.net:okserver:+'
+    //版本号使用 + 可以自动引用最新版
+    //greendao
+//    compile 'org.greenrobot:greendao:3.2.0'
 }
