--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -59,7 +59,20 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             //签名
             signingConfig signingConfigs.release
+
+            applicationVariants.all { variant ->
+                variant.outputs.each { output ->
+                    def outputFile = output.outputFile
+                    if (outputFile != null && outputFile.name.endsWith('.apk')) {
+                        // 输出apk名称为app_v1.0_2015-xx-xx_xxxx.apk
+                        //def fileName = "app_v${defaultConfig.versionName}_${releaseTime()}.apk"
+//                        def fileName = "app_v${defaultConfig.versionName}_${variant.productFlavors[0].name}.apk"
+//                        output.outputFile = new File(outputFile.parent, fileName)
+                    }
+                }
+            }
         }
+
     }
 }
 
@@ -68,11 +81,14 @@ dependencies {
     //butterknife 注解 配置参考：http://blog.csdn.net/pkandroid/article/details/51959548
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
     compile 'com.jakewharton:butterknife:8.4.0'
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-            exclude group: 'com.android.supaport', module: 'support-annotations'
-        })
+   androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+        exclude group: 'com.android.supaport', module: 'support-annotations'
+    })
     compile 'com.android.support:appcompat-v7:25.0.0'
     testCompile 'junit:junit:4.12'
     compile project(':vincent')
+    //权限适配，android6.0之后的  由于适配权限，必须在项目的根目录的build.gradle中的dependencies{}添加 classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+    compile 'com.github.hotchemi:permissionsdispatcher:2.1.3'
+    apt 'com.github.hotchemi:permissionsdispatcher-processor:2.1.3'
     compile 'org.greenrobot:greendao:3.2.0'//http://www.tuicool.com/articles/63I3EfB
 }
