--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -12,15 +12,16 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".ui.activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".OkGoTestActivity"/>
-    <service android:name=".MyService"/>
+        <activity android:name=".ui.activity.OkGoTestActivity"/>
+        <activity android:name=".ui.activity.TestActivity"/>
+    <service android:name=".service.MyService"/>
     </application>
 
 </manifest>
