--- a/vincent/build.gradle
+++ b/vincent/build.gradle
@@ -39,11 +39,11 @@ dependencies {
     testCompile 'junit:junit:4.12'
     //logger日志工具
     compile 'com.orhanobut:logger:1.8'
+    //log工具 XLog
+    compile 'com.elvishew:xlog:1.0.0'
     //Volley
     compile 'com.navercorp.volleyextensions:volley-views:2.0.1'
-    //权限适配，android6.0之后的  由于适配权限，必须在项目的根目录的build.gradle中的dependencies{}添加 classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
-    compile 'com.github.hotchemi:permissionsdispatcher:2.1.3'
-    apt 'com.github.hotchemi:permissionsdispatcher-processor:2.1.3'
+
     //检查更新的库 http://blog.csdn.net/qiang_xi/article/details/52823389
     //    compile 'com.qiangxi.checkupdatelibrary:checkupdatelibrary:1.0.2'
     compile 'com.github.bumptech.glide:glide:3.7.0'
