--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -87,7 +87,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.0.0'
     testCompile 'junit:junit:4.12'
     compile project(':vincent')
-    //权限适配，android6.0之后的  由于适配权限，必须在项目的根目录的build.gradle中的dependencies{}添加 classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+//权限适配，android6.0之后的  由于适配权限，必须在项目的根目录的build.gradle中的dependencies{}添加 classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8' 注意检查是否安装了相关插件 此依赖不能放在library里面
     compile 'com.github.hotchemi:permissionsdispatcher:2.1.3'
     apt 'com.github.hotchemi:permissionsdispatcher-processor:2.1.3'
     compile 'org.greenrobot:greendao:3.2.0'//http://www.tuicool.com/articles/63I3EfB
