--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.2'
+        classpath 'com.android.tools.build:gradle:2.3.0-alpha1'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
         classpath 'org.greenrobot:greendao-gradle-plugin:3.2.0'
         // NOTE: Do not place your application dependencies here; they belong
@@ -17,6 +17,10 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+    }
+    configurations.all {
+        //解决Warning:Conflict with dependency 'com.android.support:support-annotations' in project ':sample'. Resolved versions for app (25.0.0) and test app (23.1.1) differ. See http://g.co/androidstudio/app-test-app-conflict for details.
+        resolutionStrategy.force 'com.android.support:support-annotations:23.0.0'
     }
 }
 
